# cs396Group

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  prompt.txt
app/: __init__.py  deps.py  main.py  services.py
tests/: __init__.py  test_api.py  test_health.py  test_services.py
